Converted project to use sbt